--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -95,7 +95,7 @@ M <- 3
 MDES <- rep(0.125, M) 
 rho <- c(0.5)
 ncl <-2 
-S = 2 # Number of samples for Monte Carlo Simulation.
+S = 2000 # Number of samples for Monte Carlo Simulation.
 B = 2 # Number of samples for WestFall-Young. The equivalent is snum in our new method.
 tnum = 10000 # Number of test statistics (samples) for all procedures other than Westfall-Young. The default is set at 10,000.
 J = 20 
@@ -142,7 +142,36 @@ pander::pandoc.table(blocked_i1_2c_compare_results, paste0("PowerSimulation_", "
 
 In this section, we validate the derived minimum detectable effect size function across different __MTP__ (Bonferroni, Benjamini-Hocheberg and Holms) and __power definition (individual and minimum_1).__  The validation is carried out by generating power values for the specific __MTP__ and __power__ definitions for a specific __MDES__. Then, we supply the generated estimate __power__ as an input parameter to see if the specified __MDES__ is returned.
 
-Below, we have listed out input parameter setting that generated power values that would be input parameters for our derived MDES function.
+Below is a brief description of input parameters for the __mdes__ function from the __pump__ package. For more details, please refer to the paper here [Insert Later].
+
+* **M**: _the number of hypothesis tests (outcomes)._
+* **numFalse**: _the number of false nulls. This parameter is used for non-Shiny calculations._
+* **J**: _the number of blocks._
+* **n.j**: _the harmonic mean of the number of units per block._
+* **power**: _required statistical power for the experiment._
+* **power.definition**: _definition of statistical power from individual, d-minimal to complete power._
+* **MTP**: _type of multiple testing procedure._
+* **marginError**: _the margin of error for MDES estimation based on targeted power value._
+* **p**: _the proportion of samples that are assigned to the treatment._
+* **alpha**: _the family wise error rate (FWER)._
+* **numCovar.1**: _number of Level 1 baseline covariates (not including block dummies)._
+* **numCovar.2**: _number of Level 2 baseline covariates (set to 0 for this design)._
+* **R2.1**: _a vector of length M corresponding to R^2 for M outcomes of Level 1 (R^2 = variation in the data explained by the model)_ 
+* **R2.2**: _a vector of length M corresponding to R^2 for M outcomes of Level 2 (R^2 = variation in the data explained by the model)._ 
+* **ICC**: _intraclass correlation._
+* **mod.type**: _"c" for constant effects, "f" for fixed effects, "r" for random effects (parameter not in use at the moment)._ 
+* **sigma**: _correlation matrix for correlations between test statistics (parameter not in use at the moment.Default is set to 0.99)_
+* **rho**: _correlation between outcomes. This generates the sigma matrix._
+* **omega**: _NULL (parameter in development)_
+* **tnum**: _the number of test statistics (samples) for all procedures other than Westfall-Young & number of permutations for WY. The default is set at 10,000._
+* **snum**: _the number of samples for Westfall-Young. The default is set at 1,000._
+* **ncl**: _ncl the number of clusters to use for parallel processing. The default is set at 2._
+* **updateProgress**: _this is the progress bar function that will be passed to the main MDES calculation function._
+
+
+## High Power Values
+
+Below, we have input parameters of number of outcomes, minimum detectable effect size, statistical power, significance level that would estimate a high statistical power value of above __0.95__ to __1__ for different definitions of power. This estimated power value is used as an input to validate if the returned __mdes__ value is close to the value that was inputted to provide the estimated power.
 
 ```{r mdesCommonInputs, message = FALSE,warning = FALSE}
 M <- 3
@@ -176,7 +205,7 @@ power_M3_BF_MDES0125 <- pum::power_blocked_i1_2c(M = M, MTP = "Bonferroni", MDES
                                                  rho = rho,tnum = tnum, snum = snum, ncl = 8)
 power_M3_BF_MDES0125 <- as.data.frame(power_M3_BF_MDES0125) %>%
                             tibble::rownames_to_column(var = "MTP")
-pander::pandoc.table(power_M3_BF_MDES0125, style = "grid", split.tables = 90)
+pander::pandoc.table(power_M3_BF_MDES0125, style = "grid", split.tables = 90, caption = "Estimated Power Values as inputs to derived MDES function")
 ```
 
 #### Individual Power
@@ -190,6 +219,8 @@ mdes_0125_bonf_indiv <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J = J
                                                 rho = rho, omega = omega,tnum = tnum, snum = snum, ncl = ncl)
 mdes_0125_bonf_indiv <- as.data.frame(mdes_0125_bonf_indiv) %>%
                             tibble::rownames_to_column(var = "MTP")
+mdes_0125_bonf_indiv$MTP <- "Bonferroni"
+mdes_0125_bonf_indiv$TargetMDESValue <- MDES
 pander::pandoc.table(mdes_0125_bonf_indiv, style = "grid", split.tables = 90)
 ```
 
