--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -220,7 +220,9 @@ mdes_0125_bonf_indiv <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J = J
 mdes_0125_bonf_indiv <- as.data.frame(mdes_0125_bonf_indiv) %>%
                             tibble::rownames_to_column(var = "MTP")
 mdes_0125_bonf_indiv$MTP <- "Bonferroni"
-mdes_0125_bonf_indiv$TargetMDESValue <- MDES
+mdes_0125_bonf_indiv$TargettedMDES <- MDES
+colnames(mdes_0125_bonf_indiv)[4] <- "Targetted MDES"
+mdes_0125_bonf_indiv <- mdes_0125_bonf_indiv[, c(1,2,4,3)]
 pander::pandoc.table(mdes_0125_bonf_indiv, style = "grid", split.tables = 90)
 ```
 
@@ -244,7 +246,14 @@ mdes_0125_bh_indiv <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse, J = J,
                                               p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
                                               R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
                                               rho = rho, omega = omega, tnum = tnum, snum = snum, ncl = ncl)
-pander::pandoc.table(mdes_0125_bh_indiv, style = "grid")
+mdes_0125_bh_indiv <- as.data.frame(mdes_0125_bh_indiv) %>%
+                            tibble::rownames_to_column(var = "MTP")
+mdes_0125_bh_indiv$MTP <- "Benjamini_Hocheberg"
+mdes_0125_bh_indiv$TargettedMDES <- MDES
+colnames(mdes_0125_bh_indiv)[4] <- "Targetted MDES"
+mdes_0125_bh_indiv <- mdes_0125_bh_indiv[, c(1,2,4,3)]
+pander::pandoc.table(mdes_0125_bh_indiv, style = "grid", split.tables = 90)
+
 ```
 
 #### Minimum Power
@@ -256,7 +265,13 @@ mdes_0125_bh_min1 <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse, J = J, 
                                               p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
                                               R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
                                               rho = rho, omega = omega,tnum = tnum, snum = snum, ncl = ncl)
-pander::pandoc.table(mdes_0125_bh_min1, style = "grid")
+mdes_0125_bh_min1 <- as.data.frame(mdes_0125_bh_min1) %>%
+                            tibble::rownames_to_column(var = "MTP")
+mdes_0125_bh_min1$MTP <- "Benjamini_Hocheberg"
+mdes_0125_bh_min1$TargettedMDES <- MDES
+colnames(mdes_0125_bh_min1)[4] <- "Targetted MDES"
+mdes_0125_bh_min1 <- mdes_0125_bh_min1[, c(1,2,4,3)]
+pander::pandoc.table(mdes_0125_bh_min1, style = "grid", split.tables = 90)
 ```
 
 ### HO Validation
@@ -280,7 +295,13 @@ mdes_0125_holms_indiv1 <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J =
                                                   p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
                                                   R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
                                                   rho = rho, omega = omega,tnum = tnum, snum = snum, ncl = ncl)
-pander::pandoc.table(mdes_0125_holms_indiv1, style = "grid")
+mdes_0125_holms_indiv1 <- as.data.frame(mdes_0125_holms_indiv1) %>%
+                            tibble::rownames_to_column(var = "MTP")
+mdes_0125_holms_indiv1$MTP <- "Benjamini_Hocheberg"
+mdes_0125_holms_indiv1$TargettedMDES <- MDES
+colnames(mdes_0125_holms_indiv1)[4] <- "Targetted MDES"
+mdes_0125_holms_indiv1 <- mdes_0125_holms_indiv1[, c(1,2,4,3)]
+pander::pandoc.table(mdes_0125_holms_indiv1, style = "grid", split.tables = 90)
 ```
 
 #### Minimum Power
@@ -292,7 +313,13 @@ mdes_0125_holms_min1 <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J = J
                                                 p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
                                                 R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
                                                 rho = rho, omega = omega,tnum = tnum, snum = snum, ncl = ncl)
-pander::pandoc.table(mdes_0125_holms_min1, style = "grid")
+mdes_0125_holms_min1 <- as.data.frame(mdes_0125_holms_min1) %>%
+                            tibble::rownames_to_column(var = "MTP")
+mdes_0125_holms_min1$MTP <- "Benjamini_Hocheberg"
+mdes_0125_holms_min1$TargettedMDES <- MDES
+colnames(mdes_0125_holms_min1)[4] <- "Targetted MDES"
+mdes_0125_holms_min1 <- mdes_0125_holms_min1[, c(1,2,4,3)]
+pander::pandoc.table(mdes_0125_holms_min1, style = "grid", split.tables = 90)
 ```
 
 # Sample Validation
